FIX: Flickering effect on the loading animation

--- a/app/assets/stylesheets/components/_loader.scss
+++ b/app/assets/stylesheets/components/_loader.scss
@@ -27,11 +27,11 @@ width: 90px;
   border-radius: 4px;
   border: #F85961 2px solid;
   background: #fff;
+  transition: background 0.3s ease;
 }
 
 .loader-content {
   align-items: center;
-  visibility: visible;
 }
 
 .lds-grid {
@@ -39,6 +39,7 @@ width: 90px;
   position: relative;
   width: 80px;
   height: 80px;
+  transition: background 0.3s ease;
 }
 
 .lds-grid div {
@@ -47,6 +48,7 @@ width: 90px;
   height: 16px;
   border-radius: 20%;
   background: #F85961;
+  animation: lds-grid 1.2s linear infinite;
 }
 .lds-grid div:nth-child(1) {
   top: 8px;
